--- a/package.json
+++ b/package.json
@@ -3,83 +3,62 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "js-lint": "eslint --ext .js --ext .jsx src",
-    "js-unit": "jest --coverage",
-    "scss-lint": "sass-lint -c node_modules/frontend-tools-configs/.sass-lint.yml -v -q",
-    "run-server": "superstatic --gzip -p 8080 --host 0.0.0.0 dist/",
-    "test": "yarn js-lint && yarn scss-lint && yarn js-unit",
+    "js-lint": "yarn eslint src",
+    "js-unit": "yarn jest",
+    "js-typecheck": "yarn flow",
+    "run-server": "superstatic --port=3000 --compression --live --gzip --config=superstatic.json --live",
+    "test": "yarn js-lint && yarn js-unit && yarn js-typecheck",
     "watch": "yarn webpack --watch & yarn run-server",
     "build-dev": "yarn webpack",
     "build-production": "yarn webpack --env.production"
   },
   "devDependencies": {
-    "autoprefixer": "^8.2.0",
-    "babel-core": "^6.24.1",
-    "babel-eslint": "8.2.2",
-    "babel-jest": "^22.4.3",
-    "babel-loader": "^7.1.2",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-object-rest-spread": "^6.8.0",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-react": "^6.24.1",
-    "classnames": "^2.2.5",
-    "clean-webpack-plugin": "^0.1.18",
-    "copy-webpack-plugin": "^4.3.1",
-    "css-loader": "^0.28.9",
-    "enzyme": "^3.2.0",
-    "enzyme-adapter-react-16": "^1.1.0",
-    "extract-text-webpack-plugin": "^4.0.0-beta.0",
-    "frontend-tools-configs": "git+https://github.com/brainly/frontend-tools-configs.git#v16.2.7",
+    "@babel/core": "^7.7.2",
+    "@babel/plugin-proposal-class-properties": "^7.7.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.6.2",
+    "@babel/preset-env": "^7.7.1",
+    "@babel/preset-flow": "^7.0.0",
+    "@babel/preset-react": "^7.7.0",
+    "babel-eslint": "^10.0.3",
+    "babel-jest": "^24.9.0",
+    "babel-loader": "^8.0.6",
+    "classnames": "^2.2.6",
+    "clean-webpack-plugin": "^3.0.0",
+    "copy-webpack-plugin": "^5.0.5",
+    "css-loader": "^3.2.0",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.15.1",
+    "eslint": "^6.6.0",
+    "eslint-config-brainly-react": "^2.7.0",
+    "eslint-config-prettier": "^6.5.0",
+    "eslint-plugin-babel": "^5.3.0",
+    "eslint-plugin-flowtype": "^4.3.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-json": "^2.0.1",
+    "eslint-plugin-prettier": "^3.1.1",
+    "eslint-plugin-react": "^7.16.0",
+    "eslint-plugin-react-hooks": "^2.2.0",
+    "file-loader": "^4.2.0",
+    "flow-bin": "^0.111.3",
     "html-webpack-plugin": "^3.2.0",
-    "jest": "22.4.3",
-    "jest-teamcity-reporter": "^0.9.0",
-    "node-sass": "^4.8.3",
-    "postcss-loader": "^2.0.10",
-    "prop-types": "^15.5.10",
-    "react": "^16.3.1",
-    "react-dom": "^16.3.1",
-    "react-redux": "^5.0.5",
-    "redux": "^3.7.2",
-    "redux-thunk": "^2.2.0",
-    "sass-lint": "^1.10.2",
-    "sass-loader": "^6.0.6",
-    "superstatic": "^5.0.1",
-    "webpack": "^4.5.0",
-    "webpack-cli": "^2.0.14"
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^24.9.0",
+    "jest-runner-eslint": "^0.7.5",
+    "mini-css-extract-plugin": "^0.8.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
+    "prettier": "^1.19.1",
+    "prettier-eslint": "^9.0.0",
+    "react": "^16.11.0",
+    "react-dom": "^16.11.0",
+    "react-router-dom": "^5.1.2",
+    "superstatic": "^6.0.4",
+    "svg-sprite-loader": "^4.1.6",
+    "url-loader": "^2.2.0",
+    "webpack": "^4.41.2",
+    "webpack-cli": "^3.3.10",
+    "workbox-webpack-plugin": "^4.3.1"
   },
-  "jest": {
-    "rootDir": "./src",
-    "roots": [
-      "<rootDir>"
-    ],
-    "testPathIgnorePatterns": [
-      "/node_modules/"
-    ],
-    "transform": {
-      ".*": "babel-jest"
-    },
-    "transformIgnorePatterns": [],
-    "moduleDirectories": [
-      "node_modules/"
-    ],
-    "moduleNameMapper": {
-      "^.+\\.(css|less|scss)$": "babel-jest"
-    },
-    "setupFiles": [
-      "<rootDir>/../scripts/testsSetup.js"
-    ],
-    "coveragePathIgnorePatterns": [
-      "node_modules/"
-    ],
-    "coverageDirectory": "<rootDir>/../coverage",
-    "coverageThreshold": {
-      "global": {
-        "branches": 90,
-        "functions": 90,
-        "lines": 90,
-        "statements": 90
-      }
-    },
-    "testResultsProcessor": "jest-teamcity-reporter"
+  "dependencies": {
+    "regenerator-runtime": "^0.13.3"
   }
 }
